--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,3 +3,44 @@
   margin: 0;
   box-sizing: border-box;
 }
+
+main {
+  text-align: center;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  margin: 1rem 2rem;
+  border: 2px solid black;
+  font-size: 1.2rem;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: bolder;
+  padding: 1rem;
+}
+
+nav .logo {
+  padding-left: 2rem;
+}
+
+nav ul {
+  display: flex;
+  justify-content: space-between;
+  list-style-type: none;
+}
+
+nav ul li {
+  margin-left: 2rem;
+  text-align: center;
+}
+
+#list {
+  border-left: 1px solid black;
+  border-right: 1px solid black;
+  padding: 0 1rem;
+}
+
+#book-list,
+#contact {
+  display: none;
+}
